--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "counter",
+  "name": "Lab03",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,5 +12,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "eslint": "^5.15.3",
+    "faker": "^4.1.0",
+    "fs": "0.0.1-security",
+    "jest": "^24.5.0"
+  }
 }
