--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^5.15.3",
     "faker": "^4.1.0",
     "fs": "0.0.1-security",
-    "jest": "^24.5.0"
+    "jest": "^24.5.0",
+    "util": "^0.11.1"
   }
 }
